<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BlackHole</string>

    <!-- Main Activity -->
    <string name="not_connected">Not Connected</string>
    <string name="title_connecting">Connecting…</string>
    <string name="title_not_connected">Not Connected</string>
    <string name="title_connected_to">Connected to %1$s</string>
    <string name="message_hint">Type a message</string>
    <string name="scan">Scan for devices</string>
    <string name="send">Send</string>

    <!-- Device List Activity -->
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="finding_devices">Scanning for devices…</string>
    <string name="scanning">Scanning…</string>
</resources>